--- a/app/views/child_histories/index.html.erb
+++ b/app/views/child_histories/index.html.erb
@@ -1,24 +1,6 @@
 <div class="row">
   <div class="large-12">
-    <h1><%= t("case.actions.change_log") %></h1>
-    <div class="profile-header">
-      <ul class="history-details">
-        <% @child.ordered_histories.each do |history| %>
-          <% history['changes'].each_pair do |field, change| %>
-            <% history_entry = history_entry_for(history, field, change) %>
-            <% unless history_entry.empty? %>
-              <li>
-                <div>
-                  <%= render :partial => history_entry[:partial], :locals => history_entry[:locals].merge({:display_object => @child}) %>
-                </div>
-              </li>
-            <% end %>
-          <% end %>
-        <% end %>
-        
-      </ul>
-    </div>
-    
+    <%= render :partial => "record_shared/change_log", :locals => {record: @child} %>
     <div class="profile-tools">
       <ul>
         <li class="back"><%= link_to t("buttons.back"), case_path(@child), class: "green-button" %></li>
