--- a/app/views/tracing_requests/_header_message.html.erb
+++ b/app/views/tracing_requests/_header_message.html.erb
@@ -26,6 +26,8 @@
                 <p><strong><%= t("tracing_request.posted_from_mobile")  %></strong><br>
                 <%= field_format_date(tracing_request.posted_at) %> </p>
             <% end %>
+            <%= link_to t("tracing_request.change_log"), tracing_request_record_change_log_path(@tracing_request), :id => 'show_change_log', "data-reveal-id" => "#{@tracing_request.class.name.underscore.downcase}_#{@tracing_request.short_id}_change_log" %>
+            <div class="reveal-modal medium" id="<%= "#{@tracing_request.class.name.underscore.downcase}_#{@tracing_request.short_id}_change_log" %>" style="background: none repeat scroll 0 0 #f9faf6;" data-reveal></div>
         </div>
     </div>
 </div>
