--- a/app/views/incidents/_header_message.html.erb
+++ b/app/views/incidents/_header_message.html.erb
@@ -31,7 +31,7 @@
             <%= field_format_date(incident.posted_at) %>
           </p>
         <% end %>
-        <%= link_to t("incident.change_log"), incident_record_change_log_path(@incident), :id => 'show_change_log', "data-reveal-id" => "#{@incident.class.name.underscore.downcase}_#{@incident.short_id}_change_log" %>
+        <span id="show_change_log" class="span_button" data-change_log_url="<%=incident_record_change_log_path(@incident)%>" data-reveal-id="<%="#{@incident.class.name.underscore.downcase}_#{@incident.short_id}_change_log"%>" style="cursor: pointer;color: #575757;"><%= t("incident.change_log") %></span>
         <div class="reveal-modal medium" id="<%= "#{@incident.class.name.underscore.downcase}_#{@incident.short_id}_change_log" %>" style="background: none repeat scroll 0 0 #f9faf6;" data-reveal></div>
     </div>
   </div>
