--- a/app/views/form_section/_tick_box.html.erb
+++ b/app/views/form_section/_tick_box.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="medium-8 columns">
-    <%= check_box_tag name, "true", value == "true", :id => field_id, :class => "tick_box" %>
+    <%= check_box_tag name, "true", value == true, :id => field_id, :class => "tick_box" %>
     <%= hidden_field_tag name, "false", :id => "#{field_id}_" %>
   </div>
 
