--- a/app/views/record_shared/_change_log.html.erb
+++ b/app/views/record_shared/_change_log.html.erb
@@ -4,7 +4,7 @@
     <% record.ordered_histories.each do |history| %>
       <% history['changes'].each_pair do |field, change| %>
         <% history_entry = history_entry_for(history, field, change) %>
-        <% unless history_entry.empty? %>
+        <% if history_entry.present? %>
           <li>
             <div>
               <%= render :partial => history_entry[:partial], :locals => history_entry[:locals].merge({:display_object => record}) %>
