PRIMERO-606: Moved 'select record' column styling to a css file

--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -134,6 +134,12 @@ hr {
   display: none
 }
 
+table.dataTable {
+  thead tr th.select_record,
+  tbody tr td.select_record {
+    text-align: center;
+  }
+}
 
 ////////////////////////////////////////////////
 // Panel
