PRIMERO-562: Hide name implemented on Create Case page

--- a/app/views/form_section/_text_field.html.erb
+++ b/app/views/form_section/_text_field.html.erb
@@ -18,6 +18,10 @@
   <div class="medium-8 columns">
     <%= text_field_tag name, value, :disabled => disabled_field, :id => field_id %>
     <%= link_to(hide_text_link_text, hide_text_link_text.dehumanize, :class => "hidden_text_field", :action => hide_text_link_action) if show_hide_text_link %>
+    <% if text_field.hidden_text_field && formObject.new_record? %>
+      <%= check_box_tag "#{formObject.class.name.underscore.downcase}[hidden_name]", true, false %>
+      <%= label_tag "#{formObject.class.name.underscore.downcase}[hidden_name]", hide_text_link_text %>
+    <% end %>
     <%= image_tag "new/icon_help.png", title: text_field.help_text, class: 'tool-tip-icon vtip' if text_field.help_text.present? %>
   </div>
 </div>
