--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -1,10 +1,5 @@
 <div class="panel">
   <form id="index_filter_form">
-    <% if filters_to_show.include? 'Photo' %>
-      <%= build_filter_checkboxes(t("cases.filter_by.photo"), 'has_photo', [
-        {photo: 'Has photo?'}
-      ]) %>
-    <% end %>
     <% if filters_to_show.include? 'Flagged' %>
       <%= build_filter_checkboxes(t("cases.filter_by.flag"), 'flag', [
         {flag: t("cases.filter_by.flag_label")}
@@ -42,18 +37,19 @@
     <% if filters_to_show.include? 'Current Location' %>
       <%= build_filter_location(t("cases.filter_by.current_location"), 'location_current') %>
     <% end %>
-
     <% if filters_to_show.include? 'Registration Date' %>
       <%= render "record_shared/filter_date", date_field_title: 'registration_date', date_field: 'registration_date' %>
     <% end %>
-
     <% if filters_to_show.include? 'Case Open Date' %>
       <%= render "record_shared/filter_date", date_field_title: 'case_open_date', date_field: 'created_at' %>
     <% end %>
-
     <% if filters_to_show.include? 'Record State' %>
       <%= build_filter_checkboxes(t("cases.filter_by.record_state"), 'record_state', [{'true' => 'Valid'}, {'false' => 'Invalid'}]) %>
     <% end %>
-
+    <% if filters_to_show.include? 'Photo' %>
+      <%= build_filter_checkboxes(t("cases.filter_by.photo"), 'has_photo', [
+        {photo: t("cases.filter_by.photo_label")}
+      ]) %>
+    <% end %>
   </form>
 </div>
