--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -45,7 +45,7 @@
     <div class="table_spacer"></div>
   </div>
   <div class="large-3 columns index_filters">
-    <% render "#{controller.controller_name}/filter", filters_to_show: index_filters_to_show(record) %>
+    <%= render "#{controller.controller_name}/filter", filters_to_show: index_filters_to_show(record) %>
   </div>
 </div>
 <%= render :partial => 'shared/pagination', :locals => { :results => collection, :total => @total_records, :per => @per_page } %>
