--- a/app/views/incidents/_filter.html.erb
+++ b/app/views/incidents/_filter.html.erb
@@ -44,12 +44,10 @@
       <%= build_filter_checkboxes(t("incidents.filter_by.unaccompanied_separated_status"), 'unaccompanied_separated_status', Lookup.values('Unaccompanied Separated Status', @lookups)) %>
     <% end %>
     <% if filters_to_show.include? 'Armed Force or Group' %>
-       <%
-        #TODO
-      %>
+      <%= build_filter_checkboxes(t("incidents.filter_by.armed_force_group_name"), 'armed_force_group_names', Lookup.values('Armed Force Group Name', @lookups)) %>
     <% end %>
     <% if filters_to_show.include? 'Armed Force or Group Type' %>
-      <%= build_filter_checkboxes(t("incidents.filter_by.armed_force_group_type"), 'perpetrator_sub_category', Lookup.values('Armed Force Group Type', @lookups)) %>
+      <%= build_filter_checkboxes(t("incidents.filter_by.armed_force_group_type"), 'perpetrator_sub_categories', Lookup.values('Armed Force Group Type', @lookups)) %>
     <% end %>
   </form>
 </div>
