--- a/app/views/incidents/_summary_row.html.erb
+++ b/app/views/incidents/_summary_row.html.erb
@@ -15,9 +15,8 @@
   <% if fields_to_show.include? 'date_of_first_report' %>
     <td><%= field_format_date(record.date_of_first_report) %></td>
   <% end %>
-  <% if fields_to_show.include? 'date_of_incident' %>
-    <% #TODO - Clean up - spreadsheet is a little confusing %>
-    <td><%= field_format_date(record.date_of_incident_from) %></td>
+  <% if fields_to_show.include? 'incident_date_derived' %>
+    <td><%= field_format_date(record.incident_date_derived) %></td>
   <% end %>
   <% if fields_to_show.include? 'gbv_sexual_violence_type' %>
     <td><%= record.gbv_sexual_violence_type %></td>
