--- a/app/views/incidents/_filter.html.erb
+++ b/app/views/incidents/_filter.html.erb
@@ -38,7 +38,7 @@
       <%= build_filter_location('Current Location', 'incident_location') %>
     <% end %>
     <% if filters_to_show.include? 'Incident Date' %>
-      <%= render "record_shared/filter_date", date_field_title: 'incident_date', date_field: 'date_of_incident' %>
+      <%= render "record_shared/filter_date", date_field_title: 'incident_date', date_field: 'incident_date_derived' %>
     <% end %>
     <% if filters_to_show.include? 'Protection Status' %>
       <%= build_filter_checkboxes(t("incidents.filter_by.unaccompanied_separated_status"), 'unaccompanied_separated_status', Lookup.values('Unaccompanied Separated Status', @lookups)) %>
