Reformatted the record information in the sidebar and fixed issue with setting record state

--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -37,7 +37,7 @@ $(function() {
 <% end %>
 
 <% content_for :header_message do %>
-  <%= render 'header_message', child: @child, current_user: @current_user, duplicates: @duplicates %>
+  <%= render 'record_shared/header_message', record: @child, model: 'child' %>
 <% end %>
 
 <div class="clearfix"></div>
