--- a/app/views/children/_header_message.html.erb
+++ b/app/views/children/_header_message.html.erb
@@ -1,39 +1,24 @@
 <div class="panel">
   <div class="header_message">
-    <% if child.reunited? %>
-      <div class="reunited-message"><%= reunited_message %></div>
-    <% end %>
-    <% if child.flagged? %>
-      <p class="flag-message"><%= child.flag_message_flagged_by %></p>
-    <% end %>
-    <% if child.duplicate? %>
-      <p class="duplicate-message"><%= duplicate_message %></p>
-    <% end %>
-    <% if duplicates.present? %>
-      <p class="duplicate-message"><%= t("child.another_duplicate_before_link") %>
-      <%= link_to 'here', child_path(duplicates.first) %><%= t("child.another_duplicate_after_link") %></p>
-    <% end %>
-
     <div id='interviewer_details'>
-      <p>
-        <strong><%= t("child.registered_by") %></strong><br> 
-        <%= child['created_by'] %> <%= link_to_update_info(child) %><br> 
-        <%= field_format_date(child.created_at) %>
-      </p>
+      <!-- record state -->
+      <% #binding.pry %>
+      <p><%= t("child.record_state") %>: <%= child.record_state ? t("record_descriptions.valid") : t("record_descriptions.invalid") %></p>
+      <!-- creator -->
+      <p><%= t("child.record_state") %>: <%= child['created_by'] %> <%= link_to_update_info(child) %> <%= field_format_date(child.created_at) %></p>
+      <!-- last updated -->
       <% if child['last_updated_at']%>
         <p>
-          <strong><%= t("child.last_updated") %></strong><br>
-          <%= field_format_date(child.last_updated_at) %> 
+          <%= t("child.last_updated") %>: <%= field_format_date(child.last_updated_at) %> 
         </p>
       <% end %>
-      <% if child['posted_from']=="Mobile" %>
-        <p>
-          <strong><%= t("child.posted_from_mobile")  %></strong><br>
-          <%= field_format_date(child.posted_at) %>
-        </p>
-      <% end %>
+      <!-- current owner -->
+      <p></p>
+      <!-- change log -->
       <span id="show_change_log" class="span_button" data-change_log_url="<%=child_record_change_log_path(@child)%>" data-reveal-id="child_<%=@child.short_id%>_change_log" style="cursor: pointer;color: #575757;"><%= t("child.change_log") %></span>
       <div class="reveal-modal medium" id="child_<%=@child.short_id%>_change_log" style="background: none repeat scroll 0 0 #f9faf6;" data-reveal></div>
     </div>
   </div>
 </div>
+
+        
