--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% content_for :header_message do %>
-  <%= render 'header_message', child: @child, current_user: @current_user, duplicates: @duplicates %>
+  <%= render 'record_shared/header_message', record: @child, model: 'child' %>
 <% end %>
 
 <div class="clearfix"></div>
