--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% content_for :header_message do %>
-  <%= render 'header_message', incident: @incident, current_user: @current_user, duplicates: @duplicates %>
+  <%= render 'record_shared/header_message', record: @incident, model: 'incident' %>
 <% end %>
 
 <div class="clearfix"></div>
