--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -37,7 +37,7 @@ $(function() {
 <% end %>
 
 <% content_for :header_message do %>
-  <%= render 'header_message', incident: @incident, current_user: @current_user, duplicates: @duplicates %>
+  <%= render 'record_shared/header_message', record: @incident, model: 'incident' %>
 <% end %>
 
 <div class="clearfix"></div>
