--- a/app/views/tracing_requests/show.html.erb
+++ b/app/views/tracing_requests/show.html.erb
@@ -55,7 +55,7 @@ $(".profile-tools .investigated a").click( function(){
 <% end %>
 
 <% content_for :header_message do %>
-  <%= render 'header_message', tracing_request: @tracing_request, current_user: @current_user, duplicates: @duplicates %>
+  <%= render 'record_shared/header_message', record: @tracing_request, model: 'tracing_request' %>
 <% end %>
 
 <div class="clearfix"></div>
