PRIMERO-606: 'Select All' records keeps all records selected when navigating across the pages (pagination)

--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -142,6 +142,9 @@ table.dataTable {
   thead tr th.select_record,
   tbody tr td.select_record {
     text-align: center;
+    input[type="checkbox"] {
+      margin: 0;
+    }
   }
 }
 
