--- a/app/views/record_shared/_filter_date.html.erb
+++ b/app/views/record_shared/_filter_date.html.erb
@@ -1,5 +1,5 @@
 <div class="filter">
-  <h3><%= t("cases.filter_by.#{date_field_title}") %></h3>
+  <h3><%= t("#{record}.filter_by.#{date_field_title}") %></h3>
   <div class="filter-controls">
     <div class="row">
       <div class="medium-2 columns">
