--- a/app/views/shared/histories/_flag_change.erb
+++ b/app/views/shared/histories/_flag_change.erb
@@ -1,5 +1,5 @@
 <% if to_value == 'true' || to_value == true %>
-  <%= datetime %> <%=	t("histories.flag.record_flagged_by") %> <%= user_name %> <%=	t("histories.belong_to") %> <%= organisation %> <%=	t("histories.because") %> <%= message %>
+  <%= datetime %> <%=	t("histories.flag.record_flagged_by") %> <%= user_name %> <%=	t("histories.belong_to") %> <%= organization %> <%=	t("histories.because") %> <%= message %>
 <% else %>
-  <%= datetime %> <%=	t("histories.flag.record_unflagged_by") %> <%= user_name %> <%=	t("histories.belong_to") %> <%= organisation %> <%=	t("histories.because") %> <%= message %>
+  <%= datetime %> <%=	t("histories.flag.record_unflagged_by") %> <%= user_name %> <%=	t("histories.belong_to") %> <%= organization %> <%=	t("histories.because") %> <%= message %>
 <% end %>
