--- a/app/views/shared/histories/_history_change.html.erb
+++ b/app/views/shared/histories/_history_change.html.erb
@@ -1,1 +1,1 @@
-<%= "#{datetime} #{field} #{history_wording(from_value, to_value)} #{t("histories.by")} #{user_name} #{t("histories.belong_to")} #{organisation}" %>
+<%= "#{datetime} #{field} #{history_wording(from_value, to_value)} #{t("histories.by")} #{user_name} #{t("histories.belong_to")} #{organization}" %>
