--- a/app/views/shared/histories/_photo_history_change.html.erb
+++ b/app/views/shared/histories/_photo_history_change.html.erb
@@ -4,13 +4,13 @@
   <% new_photos.each do |new_photo| %>
     <%= link_to_photo_with_key(new_photo, display_object) %>
   <% end %>
-  <%=	t("histories.added_by") %> <%= user_name %> <%=	t("histories.belong_to") %> <%= organisation %>
+  <%=	t("histories.added_by") %> <%= user_name %> <%=	t("histories.belong_to") %> <%= organization %>
 <% end %>
 <% unless deleted_photos.blank? %>
   <%= deleted_photos.size > 1 ? "Photos" : "Photo" %>
   <% deleted_photos.each do |deleted_photo| %>
     <%= link_to_photo_with_key(deleted_photo, display_object) %>
   <% end %>
-  <%=	t("histories.deleted_by") %> <%= user_name %> <%=	t("histories.belong_to") %> <%= organisation %>
+  <%=	t("histories.deleted_by") %> <%= user_name %> <%=	t("histories.belong_to") %> <%= organization %>
 <% end %>
 
