--- a/app/views/system_logs/index.html.erb
+++ b/app/views/system_logs/index.html.erb
@@ -3,9 +3,9 @@
     <% @log_entries.each do |entry| %>
       <li>
         <% if entry[:child_ids].size == 1 %>
-          <%= entry[:created_at]%>  <%= entry[:type] %> <%= t("histories.system_logs.of_child_with_id") %> <%= entry[:child_ids] %> <%= t("histories.system_logs.performed_by") %> <%= entry[:user_name] %> <%= t("histories.belong_to") %> <%= entry[:organisation] %>
+          <%= entry[:created_at]%>  <%= entry[:type] %> <%= t("histories.system_logs.of_child_with_id") %> <%= entry[:child_ids] %> <%= t("histories.system_logs.performed_by") %> <%= entry[:user_name] %> <%= t("histories.belong_to") %> <%= entry[:organization] %>
         <% else %>
-          <%= entry[:created_at]%>  <%= entry[:type] %> <%= t("histories.of") %> <%= entry[:child_ids].size %> <%= t("histories.system_logs.records_performed_by") %> <%= entry[:user_name] %> <%= t("histories.belong_to") %> <%= entry[:organisation] %>
+          <%= entry[:created_at]%>  <%= entry[:type] %> <%= t("histories.of") %> <%= entry[:child_ids].size %> <%= t("histories.system_logs.records_performed_by") %> <%= entry[:user_name] %> <%= t("histories.belong_to") %> <%= entry[:organization] %>
         <% end %>
       </li>
     <% end %>
