--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -140,11 +140,11 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :organisation, t("organisation"), :class=>'key inline'  %>
+          <%= f.label :organization, t("organization"), :class=>'key inline'  %>
         </span>
       </div>
       <div class="medium-8 columns">
-        <%= f.text_field :organisation %>
+        <%= f.text_field :organization %>
       </div>
       <div class="medium-1 columns">
         <span class="required">*</span>
