--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -73,10 +73,10 @@
 
         <div class="row">
           <div class="medium-4 columns">
-            <label class="key"><%= t("organisation") %>:</label>
+            <label class="key"><%= t("organization") %>:</label>
           </div>
           <div class="medium-8 columns">
-            <%= h @user.organisation %>
+            <%= h @user.organization %>
           </div>
         </div>
 
