Added x to modals, switched actions and flag on index pages, fixed current owner, styled password modal

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -17,5 +17,6 @@
 @import "primero/dropdowns";
 @import "primero/datatables";
 @import "primero/dashboard";
+@import "primero/password_modal";
 @import "font-awesome-sprockets";
 @import "font-awesome";
