--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -26,7 +26,7 @@
 
     <div class="large-8 medium-8 columns side-tab-content-container">
       <div class="side-tab-content" data-equalizer-watch>
-        <%= hidden_field_tag('child[revision]', @child._rev) %>
+        <%= hidden_field_tag('child[base_revision]', @child._rev) %>
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @child, :form_group_name => form_group_name} %>
         <% end %>
