--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -26,7 +26,7 @@
 
     <div class="large-8 medium-8 columns side-tab-content-container">
       <div class="side-tab-content" data-equalizer-watch>      
-        <%= hidden_field_tag('incident[revision]', @incident._rev) %>
+        <%= hidden_field_tag('incident[base_revision]', @incident._rev) %>
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @incident, :form_group_name => form_group_name} %>
         <% end %>
