--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+  <div class="large-12 medium-12 columns">
+
 <h1 class="no_border float_left"><%= @page_name %> </h1>
 <% if can? :create, Replication %>
     <%= link_to content_tag(:span, t("replication.configure_a_server"), :class => 'create_user'), new_replication_path, :class => 'btn' %>
@@ -33,4 +36,7 @@
     <% end %>
     <div id="modal-dialog" class="hide"></div>
   </div>
+</div>
+
+</div>
 </div>
