--- a/app/views/replications/_form.html.erb
+++ b/app/views/replications/_form.html.erb
@@ -24,7 +24,7 @@
   </fieldset>
 
   <div class="btn_panel">
-    <%= cancel_button devices_path %>
+    <%= cancel_button replications_path %>
     <%= submit_button t("buttons.save") %>
   </div>
 <% end %>
