--- a/app/views/replications/index.html.erb
+++ b/app/views/replications/index.html.erb
@@ -1,10 +1,19 @@
 <div class="row">
+  <div class="large-8 medium-4 columns">    
+  </div>
+  <div class="large-4 medium-4 columns">
+      <% if can? :create, Replication %>
+        <%= link_to content_tag(:span, t("replication.configure_a_server"), class: 'create_user'), new_replication_path,  class: 'btn green-button right' %>
+      <% end %>
+      <%= render 'exports/button', locals: {model: FormSection} %>
+      <%# TODO: Hiding imports so that QA doesn't get into trouble %>
+      <%#= render 'imports/button' %>
+  </div>
+</div>
+<div class="row">
   <div class="large-12 medium-12 columns">
 
-<h1 class="no_border float_left"><%= @page_name %> </h1>
-<% if can? :create, Replication %>
-    <%= link_to content_tag(:span, t("replication.configure_a_server"), :class => 'create_user'), new_replication_path, :class => 'btn' %>
-<% end %>
+
 <div class="page-content-new">
   <div class="side-tab-content full_width">
     <% unless @replications.nil? || @replications.empty? %>
