Fixed line height in guiding questions, added cancel button, fixed, and changed button text to enable/disable records, and turned ? on form fields into help text.

--- a/app/assets/stylesheets/primero/button.scss
+++ b/app/assets/stylesheets/primero/button.scss
@@ -107,12 +107,19 @@
   }
 }
 
-a.close-reveal-modal {
+a.close-reveal-modal:not(.green-button) {
   font-size: 1.5rem !important;
 
   &:hover {
     text-decoration: none;
   }
+}
+
+a.close-reveal-modal.green-button {
+  top: inherit;
+  position: inherit;
+  line-height: normal;
+  font-weight: inherit;
 }
 
 ////////////////////////////////////////////////
