--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -118,10 +118,11 @@ p.help {
 }
 
 .popover-content {
-  padding: 9px 14px;
+  padding: 2px 14px;
   height: 180px;
   overflow: hidden;
   overflow-y: scroll;
+  white-space: pre-line;
 }
 
 .summary_group {
