--- a/app/views/record_shared/_flag_records.html.erb
+++ b/app/views/record_shared/_flag_records.html.erb
@@ -2,7 +2,7 @@
   <span><%= t("buttons.flag_records") %></span>
 </a>
 
-<div class="reveal-modal tiny" id="<%= "#{model.name.underscore.downcase}_flag_records" %>" style="background: none repeat scroll 0 0 #f9faf6;" data-reveal>
+<div class="reveal-modal medium" id="<%= "#{model.name.underscore.downcase}_flag_records" %>" style="background: none repeat scroll 0 0 #f9faf6;" data-reveal>
   <a class="close-reveal-modal">&#215;</a>
   <div class="row flag_records">
     <div class="medium-5 columns">
