Not showing help text if help text not provided for a field

--- a/app/views/form_section/_text_field.html.erb
+++ b/app/views/form_section/_text_field.html.erb
@@ -22,6 +22,6 @@
       <%= check_box_tag "#{formObject.class.name.underscore.downcase}[hidden_name]", true, false %>
       <%= label_tag "#{formObject.class.name.underscore.downcase}[hidden_name]", hide_text_link_text %>
     <% end %>
-    <p class="help"><%= text_field.help_text %></p>
+    <% if text_field.help_text %><p class="help"><%= text_field.help_text %></p><% end %>
   </div>
 </div>
