starting to refactor replication model

--- a/app/views/replications/_form.html.erb
+++ b/app/views/replications/_form.html.erb
@@ -10,8 +10,8 @@
     </p>
 
     <p>
-      <%= f.label :remote_app_url, t("replication.remote_app_url"), :class => "key" %>
-      <%= f.text_field :remote_app_url %>*
+      <%= f.label :remote_app_uri, t("replication.remote_app_uri"), :class => "key" %>
+      <%= f.text_field :remote_app_uri %>*
     </p>
     <p>
       <%= f.label :username, t("login.username"), :class => "key" %>
