Toned down size of seperator text

--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -125,9 +125,9 @@ hr {
 }
 
 .separator {
-  margin-bottom: 20px;
+  margin: 10px 0 0 10px;
   font-family: 'Roboto-Light', sans-serif;
-  font-size: $twentyfive_px;
+  font-size: 1.463rem;
 }
 
 .placeholder_text {
