--- a/app/views/replications/index.html.erb
+++ b/app/views/replications/index.html.erb
@@ -12,40 +12,16 @@
 </div>
 <div class="row">
   <div class="large-12 medium-12 columns">
-
-
-<div class="page-content-new">
-  <div class="side-tab-content full_width">
-    <% unless @replications.nil? || @replications.empty? %>
-        <%= render :partial => "replications/index", :locals => {:replications => @replications} %>
-    <% end %>
-
-    <% unless @devices.nil? || @devices.empty?%>
-        <table id="devices" class="list_table">
-          <thead>
-          <tr>
-            <th><%= t("imei") %></th>
-            <th><%= t("login.username") %></th>
-            <th><%= t("blacklisted") %></th>
-          </tr>
-          </thead>
-          <tbody>
-          <% @devices.each do |device| %>
-              <tr>
-                <td><%= device.imei %></td>
-                <td><%= device.user_name %></td>
-                <td><input class="device_blacklist_check_box" type="checkbox" id="<%= device.imei %>"
-                           <% if device.blacklisted %> checked="checked"
-                           <% end %>>
-                </td>
-              </tr>
-          <% end %>
-          </tbody>
-        </table>
-    <% end %>
-    <div id="modal-dialog" class="hide"></div>
+    <div class="page-content-new">
+      <div class="side-tab-content full_width">
+        <% if @replications.present? %>
+          <%= render :partial => "replications/list_view_table", :locals => {:replications => @replications} %>
+        <% end %>
+        <% if @devices.present? %>
+            <%= render :partial => "replications/devices", :locals => {:devices => @devices} %>
+        <% end %>
+        <div id="modal-dialog" class="hide"></div>
+      </div>
+    </div>
   </div>
-</div>
-
-</div>
 </div>
