--- a/app/views/record_shared/_change_log.html.erb
+++ b/app/views/record_shared/_change_log.html.erb
@@ -2,13 +2,13 @@
 <div class="profile-header">
   <ul class="history-details">
     <% record.ordered_histories.each do |history| %>
-      <% if history.action.to_sym == :create %>
-    <li>
-      <div>
-        <%= render :partial => "shared/histories/record_created", 
-          :locals => {:organization => history.user_organization, :user_name => history.user_name, :datetime => @user.localize_date(history.datetime, "%Y-%m-%d %H:%M:%S %Z")} %>
-      </div>
-    </li>
+      <% if history.action.present? && history.action.to_sym == :create %>
+        <li>
+          <div>
+            <%= render :partial => "shared/histories/record_created", 
+              :locals => {:organization => history.user_organization, :user_name => history.user_name, :datetime => @user.localize_date(history.datetime, "%Y-%m-%d %H:%M:%S %Z")} %>
+          </div>
+        </li>
       <% else %>
         <% history.changes.each_pair do |field, change| %>
           <% history_entry = history_entry_for(history, field, change) %>
