--- a/app/views/replications/_list_view_table.html.erb
+++ b/app/views/replications/_list_view_table.html.erb
@@ -1,12 +1,12 @@
-<table class="list_table">
+<table id="list_table" class="list_table">
   <thead>
   <tr>
     <th><%= t "replication.description" %></th>
     <th ><%= t "replication.remote_app_url" %></th>
-    <th colspan="2"><%= t "login.username" %></th>
+    <th ><%= t "login.username" %></th>
     <th><%= t "replication.status" %></th>
     <th><%= t "replication.timestamp" %></th>
-    <th colspan="2"><%= t "replication.actions" %></th>
+    <th ><%= t "replication.actions" %></th>
   </tr>
   </thead>
 
@@ -14,17 +14,12 @@
       <% replications.each do |rep| %>
           <tr>
             <td><%= rep.description %></td>
-            <td>
-              <%= link_to rep.remote_app_url, rep.remote_app_url, :target => '_blank' %>
-            </td>
+            <td> <%= link_to rep.remote_app_url, rep.remote_app_url, :target => '_blank' %> </td>
             <td><%= rep.username %></td>
             <td class="status">
-              <span class="icon <%= rep.status %>"></span>
-              <span><%= t "replication.#{rep.status}" %></span>
+              <%= t "replication.#{rep.status}" %>
             </td>
-            <td>
-              <%= l rep.timestamp, :format => :long if rep.timestamp %>
-            </td>
+            <td><%= l rep.timestamp, :format => :long if rep.timestamp %></td>
             <td>
               <%= link_to t("replication.stop"), stop_replication_path(rep), :method => :post if rep.active? %>
               <%= link_to t("replication.start"), start_replication_path(rep), :method => :post unless rep.active? %>
