Changed revel modal id for change log, and indexing record_state as a boolean

--- a/app/views/record_shared/_header_message.html.erb
+++ b/app/views/record_shared/_header_message.html.erb
@@ -24,7 +24,7 @@
       </p>
       <!-- change log -->
       <a id="show_change_log" class="span_button" data-change_log_url="<%= "/#{model.pluralize}/#{record.id}/change_log" %>" 
-         data-reveal-id="child_<%= record.short_id%>_change_log">
+         data-reveal-id="<%= model %>_<%= record.short_id%>_change_log">
         <%= t("record_panel.change_log") %>
       </a>
       <div class="reveal-modal medium" id="<%= model %>_<%=record.short_id%>_change_log" data-reveal></div>
