PRIMERO-652: Changed route to change log for cases.

--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -37,7 +37,7 @@ $(function() {
 <% end %>
 
 <% content_for :header_message do %>
-  <%= render 'record_shared/header_message', record: @child, model: 'child' %>
+  <%= render 'record_shared/header_message', record: @child, model: 'case' %>
 <% end %>
 
 <div class="clearfix"></div>
