--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% content_for :header_message do %>
-  <%= render 'record_shared/header_message', record: @child, model: 'child' %>
+  <%= render 'record_shared/header_message', record: @child, model: 'case' %>
 <% end %>
 
 <div class="clearfix"></div>
