--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -26,6 +26,13 @@
 <input type="hidden" id="move_url" value="<%= change_form_form_section_fields_path(@form_section) %>">
 <input type="hidden" id="save_order_url" value="<%= save_order_form_section_fields_path(@form_section) %>">
 
+<%
+  #TODO - RESOLVE THIS
+  # The list_table id is needed to clean up the table styling issue at the bottom
+  # Determine if / why form_sections id is needed
+  # If it is needed, make it work
+  #<table id="list_table" class="list_table">
+%>
 <table id="form_sections" class="list_table">
   <thead>
     <tr>
