--- a/app/views/form_section/index.html.erb
+++ b/app/views/form_section/index.html.erb
@@ -6,10 +6,8 @@
     <h4><%= t("forms.label") + " > #{@primero_module.name} > #{@parent_form.titleize}"%></h4>
   </div>
   <div class="large-4 medium-4 columns">
+      <%= render partial: 'record_shared/actions', locals: {model: FormSection} %>
       <%= link_to content_tag(:span, t("form_section.create"), class: 'create_user'), new_form_section_path({module_id: @module_id, parent_form: @parent_form}),  class: 'btn green-button' %>
-      <%= render 'exports/button', locals: {model: FormSection} %>
-      <%# TODO: Hiding imports so that QA doesn't get into trouble %>
-      <%#= render 'imports/button' %>
   </div>
   <div class="large-2 medium-2 columns">
       <%= select_tag :module_id,
