added stylesheet for form customization

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -18,5 +18,6 @@
 @import "primero/datatables";
 @import "primero/dashboard";
 @import "primero/password_modal";
+@import "primero/custom_forms";
 @import "font-awesome-sprockets";
 @import "font-awesome";
