--- a/app/views/form_section/index.html.erb
+++ b/app/views/form_section/index.html.erb
@@ -1,33 +1,31 @@
-<div class="custom_forms">
-  <div class="row">
-    <div class="large-4 medium-4 columns">
-      <%
-         #TODO i18n and STYLE
-      %>
-      <h4><%= t("forms.label") + " > #{@primero_module.name} > #{@parent_form.titleize}"%></h4>
-    </div>
-    <div class="large-4 medium-4 columns">
-        <%= render partial: 'record_shared/actions', locals: {model: FormSection} %>
-        <%= link_to content_tag(:span, t("form_section.create"), class: 'create_user'), new_form_section_path({module_id: @module_id, parent_form: @parent_form}),  class: 'btn green-button' %>
-    </div>
-    <div class="large-2 medium-2 columns">
-        <%= select_tag :module_id,
+<div class="row">
+  <div class="large-4 medium-4 columns">
+    <%
+       #TODO i18n and STYLE
+    %>
+    <h4><%= t("forms.label") + " > #{@primero_module.name} > #{@parent_form.titleize}"%></h4>
+  </div>
+  <div class="large-4 medium-4 columns">
+      <%= render partial: 'record_shared/actions', locals: {model: FormSection} %>
+      <%= link_to content_tag(:span, t("form_section.create"), class: 'create_user'), new_form_section_path({module_id: @module_id, parent_form: @parent_form}),  class: 'btn green-button' %>
+  </div>
+  <div class="large-2 medium-2 columns">
+      <%= select_tag :module_id,
                      options_for_select(@current_modules.map{|m| [m.name, m.id]}, @primero_module.id),
                      :onchange => "if(this.value){window.location='?module_id='+this.value+'&parent_form=#{@parent_form}';}" %>
-    </div>
-    <div class="large-2 medium-2 columns">
-        <%= select_tag :parent_form,
+  </div>
+  <div class="large-2 medium-2 columns">
+      <%= select_tag :parent_form,
                      options_for_select(@record_types.map{|r| [r.titleize, r]}, @parent_form),
                      :onchange => "if(this.value){window.location='?module_id=#{@module_id}&parent_form='+this.value;}" %>
-    </div>
   </div>
-  <div class="row">
-    <div class="large-12 medium-12 columns">
-      <ul>
-        <% @form_sections.each do |form_group, forms| %>
-          <%= build_form_custom_list(form_group, forms) %>
-        <% end %>
-      </ul>
-    </div>
+</div>
+<div class="row">
+  <div class="large-12 medium-12 columns custom_forms">
+    <ul>
+      <% @form_sections.each do |form_group, forms| %>
+        <%= build_form_custom_list(form_group, forms) %>
+      <% end %>
+    </ul>
   </div>
 </div>
